Resizable panels and fixed scrollbars

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -5,6 +5,30 @@
     outline: none;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track, ::-webkit-scrollbar-corner {
+  background: #1A1B26;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.44);
+  border-radius: 100px;
+  border: 2px solid #1A1B26;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.55);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: rgba(0, 0, 0, 0.66);
+}
+
+
 html, body, .main {
   height: 100%;
   width: 100%;
@@ -322,13 +346,6 @@ tbody td {
   box-sizing: border-box;
 }
 
-.tables-container {
-  border-left: 0px;
-  height: 100%;
-  max-height: 100%;
-  overflow: hidden;
-}
-
 .input-container {
   width: 100%;
   height: 100%;
@@ -341,7 +358,7 @@ tbody td {
 }
 
 .editor, .cm-theme, .cm-editor, .cm-scroller, .cm-content {
-  height: 100%; 
+  height: 100% !important; 
 }
 
 .editor * {
@@ -465,19 +482,39 @@ tbody td {
 }
 
 .content-container {
-  grid-template-columns: minmax(0,4fr) minmax(250px,1fr);
-  display: grid;
+  height: 100%;
+  max-height: 100%;
+  overflow: hidden;
+}
+
+.tables-container {
+  border-left: 0px;
   height: 100%;
   max-height: 100%;
   overflow: hidden;
 }
 
 .content-area {
-  display: grid;
   border-top: 0px;
   border-left: 0px;
-  grid-template-rows: 1fr 150px;
   overflow: auto;
+}
+
+.resize-handle-vertical {
+  background-color: #141E36;
+  transition: 0.5s background-color;
+  width: 4px;
+}
+
+.resize-handle-horizontal {
+  background-color: #141E36;
+  transition: 0.5s background-color;
+  height: 4px;
+}
+
+.resize-handle-vertical:hover, .resize-handle-horizontal:hover {
+  background-color: #2f477e;
+  transition-delay: 0.2s;
 }
 
 .home-container {
